# binance-kedro-pipeline

./: README.md  pyproject.toml
conf/base/: catalog.yml  logging.yml  parameters.yml
conf/base/parameters/: arf.yml  feature_engineering.yml  labeling.yml  lgbm.yml
src/: requirements.txt  settings.py
src/binance_pipeline/: checks.py  features.py  nodes.py  pipeline.py  pipeline_registry.py  settings.py  validation.py
src/binance_pipeline/inference/: online_predictor.py
src/binance_pipeline/lgbm/lgbm/: nodes.py
src/binance_pipeline/pipelines/arf/: nodes.py  pipeline.py
src/binance_pipeline/pipelines/data_science/: nodes.py
src/binance_pipeline/pipelines/lgbm/: nodes.py  pipeline.py
src/binance_pipeline/pipelines/reporting/: nodes.py  pipeline.py
