[tool.kedro]
package_name = "binance_pipeline"
project_name = "Binance Pipeline"
project_version = "0.18.14"
kedro_init_version = "0.18.14"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/binance_pipeline -ra"""

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
source = ["binance_pipeline"]

# --- FINAL, MODERNIZED [project] SECTION for October 2025 ---
[project]
name = "binance-kedro-pipeline"
version = "0.18.14"
dependencies = [
    "kedro~=1.0.0",                 # Major stable release
    "pandas~=2.3.3",               # Latest stable version
    "numpy~=2.3.1",                # Modern NumPy 2.x series
    "pyarrow",                     # Keep as is, works with latest pandas/polars
    "polars>=1.34.0",              # Latest stable version
    "scipy>=1.16.0",               # Latest stable version
    "numba>=0.57.0",               # Numba is relatively stable, keep as is
    "scikit-learn>=1.7.0",         # Latest stable version
    "lightgbm>=4.0.0",             # Still the current major version series
    "river>=0.21.0",               # Updated to a more recent version
    "ta>=0.11.0",                  # This library is stable, no change needed
    "requests",                    # Keep as is, very stable API
    "tqdm",                        # Keep as is, very stable API
    "pandera~=0.26.0",             # Significantly updated for new features
    "pydantic>=2.12.0",            # Updated for new features and Python support
    "optuna>=4.5.0",               # Updated for latest features
]
