[tool.kedro]
package_name = "binance_pipeline"
project_name = "Binance Pipeline"
project_version = "0.18.14"
kedro_init_version = "0.18.14"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/binance_pipeline -ra"""

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
source = ["binance_pipeline"]

# --- FINAL, COMPATIBILITY-FOCUSED [project] SECTION for Managed Environments ---

[project]
name = "binance-kedro-pipeline"
version = "0.18.14"
dependencies = [
    "kedro~=0.18.14",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "kedro-datasets~=2.0.0",
    "pyarrow",
    "polars>=0.50.0", # <-- CORRECTED to a modern version available in Oct 2025
    "scipy>=1.10.0",
    "numba>=0.57.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "river>=0.20.0",
    "ta>=0.11.0",
    "requests",
    "tqdm",
    "pandera==0.19.0",
    "pydantic>=2.0.0",
    "optuna>=3.5.0",
    "statsmodels>=0.14.0", # <-- NEW: Added for VIF calculation
]
